# gdmod

./: README.md
server/: rewrite.py
src/: main.cpp  manager.cpp
test/: CMakeLists.txt  mod.json
test/src/include/: manager.hpp
